<resources>
    <string name="app_name">EasySocketLanSample</string>

    <string name="common_close">close</string>

    <string name="common_hint">hint</string>

    <string name="dialog_close">colse app?</string>

    <string name="lan_connect_error">LAN DISCONNECT! PLEASE CHECK LAN SETTING</string>

    <string name="lan_connect_close">PRESS OK TO CLOSE SERVER!</string>

    <string name="socket_lan_connected">connected</string>
    <string name="socket_lan_disconnected">disconnected</string>

    <string name="activity_main_search_state">search state:</string>
    <string name="activity_main_search_stop">stop</string>
    <string name="activity_main_search_running">searching</string>

    <string name="activity_main_link_state">link state:</string>
    <string name="activity_main_link_unlink">unconnect</string>
    <string name="activity_main_link_linking">connect listening</string>

    <string name="activity_main_search_btn_text">search</string>

    <string name="activity_main_link_text">client linked</string>

    <string name="widget_client_name">name:</string>
    <string name="widget_client_ip">ip:</string>
    <string name="widget_client_message">message:</string>
    <string name="widget_client_more_btn_text">more</string>
    <string name="wideget_client_send_btn_text">send</string>

    <!--Toast message -->
    <string name="search_start">start search</string>
    <string name="searching_boradcast">searching boradcast</string>
    <string name="search_finish">search finish</string>
    <string name="search_error">search error</string>

    <string name="connect_start">connect start</string>
    <string name="connecting_client">one client connected</string>
    <string name="connect_error">connect error</string>

    <string name="socket_verification">socket verification</string>
    <string name="socket_write_start">socket write start</string>
    <string name="socket_on_writing">socket on writing</string>
    <string name="socket_read_start">socket read start</string>
    <string name="socket_on_reading">socket on reading</string>
    <string name="socket_disconnected">socket disconnected</string>


    <!--dailog message -->
    <string name="dialog_send">send</string>


    <!--actionbar-->
    <string name="actionbar_search">search</string>
    <string name="actionbar_connect">connect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
