<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.astatus.easysocketlansampleserver.activity.MainActivity">

    <TextView
        android:id="@+id/search_state_text_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_main_search_state"
        android:textColor="@color/common_text_black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_state_TV"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/search_state_text_TV"
        android:text="@string/activity_main_search_stop"
        android:textColor="@color/common_text_gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_state_text_TV"
        app:layout_constraintStart_toEndOf="@+id/search_state_text_TV" />

    <Button
        android:id="@+id/search_BTN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/activity_main_search_btn_text"
        android:textColor="@color/common_text_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/search_state_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_state_TV" />

    <TextView
        android:id="@+id/link_state_text_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_state_text_TV"
        android:layout_marginTop="8dp"
        android:text="@string/activity_main_link_state"
        android:textColor="@color/common_text_black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/search_state_text_TV"
        app:layout_constraintTop_toBottomOf="@+id/search_state_text_TV" />

    <TextView
        android:id="@+id/link_state_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/activity_main_link_unlink"
        android:textColor="@color/common_text_gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/link_state_text_TV"
        app:layout_constraintStart_toEndOf="@+id/link_state_text_TV" />

    <TextView
        android:id="@+id/last_client_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/activity_main_link_text"
        android:textColor="@color/common_text_gray"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/link_state_TV"
        app:layout_constraintEnd_toEndOf="@+id/search_BTN"
        app:layout_constraintStart_toEndOf="@+id/link_state_TV"
        app:layout_constraintTop_toTopOf="@+id/link_state_TV" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_state_TV"
        app:layout_constraintVertical_bias="1.0">
    </android.support.v7.widget.RecyclerView>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->


</android.support.constraint.ConstraintLayout>
